Fix checkmark alignment

--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -147,7 +147,7 @@ select {
   position: relative;
 
   top: 1px;
-  left: 2px;
+  left: 3px;
   width: 5px;
   height: 6px;
 
